--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 				<div class="richEditor">
 					<div class="toolbar">
 						<button class="material-icons" data-element="bold" title="bold">format_bold</button>
-						<button class="material-icons" data-element="strikeThrough" title="Underline">format_underline</button>
+						<button class="material-icons" data-element="underline" title="Underline">format_underline</button>
+						<button class="material-icons" data-element="strikeThrough" title="StrikeThrough"> -- </button>
 						<button class="material-icons" data-element="italic" title="Italic">format_italic</button>
 						<button class="material-icons" data-element="justifyLeft" title="Align Left">format_align_left</button>
 						<button class="material-icons" data-element="justifyCenter" title="Align Center">
@@ -37,16 +38,30 @@
 						<button class="material-icons" data-element="insertUnorderedList" title="Bullet List">
 							format_list_bulleted
 						</button>
-						<button class="material-icons" data-element="createLink" title="Link">link</button>
-						<button class="material-icons" data-element="insertImage" title="Attach Image">image</button>
+						<!-- <button class="material-icons" data-element="createLink" title="Link">link</button> -->
+						<!-- <button class="material-icons" data-element="insertImage" title="Attach Image">image</button> -->
 						<button class="material-icons" data-element="add" title="Increase Font Size">add</button>
 						<button class="material-icons" data-element="remove" title="Decrease Font Size">remove</button>
 						<button class="material-icons" data-element="checkbox" title="Checkbox">add_box</button>
+						<button class="material-icons" data-element="foreColor" title="Text Color">
+							format_color_text 
+							<input name="Color Picker" type="color" id="colorPicker" style="display: none;"/>
+						</button>
 					</div>
 					<div class="editor" contenteditable="true" data-gramm_editor="false"></div>
 				</div>
 			</div>
 		</div>
+
+		<div style="display: none; background-color:black; 
+			outline-color:black; 
+			outline-width:2px; 
+			width:500px; 
+			height:100px;"  
+		id="ExtentionBody" 
+		onclick="GetColor('ExtentionBody')">
+		</div>
+		<div><input name="Color Picker" type="color" id="Color Picker"/></div>
 
 		<!-- <div id="showCodeDialog">
 			<h2>Source Code</h2>
